--- a/sass_course/css/main.css
+++ b/sass_course/css/main.css
@@ -1,11 +1,35 @@
-div#main {
-  width: 100%;
+@import url("//fonts.googleapis.com/css?family=Lato:100,300,400,700,300italic,700italic");
+@import url("//fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100&subset=latin,latin-ext");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-text-stroke: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-family: 'Roboto Slab', serif;
+  color: #333;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: none;
 }
 
-div#main h1#title {
-  font-size: 12px;
+.texto {
+  text-align: justify;
+  font-size: 20px;
 }
 
-div#main p {
-  font-weight: bold;
+/* HEAD */
+#head .menu .container .info {
+  font-size: 20px;
+}
+
+#head .menu .container .logo i {
+  font-size: 40px;
+}
+
+#head .menu .container .logo i:hover {
+  color: #2196f3;
 }
